--- a/css/styles.css
+++ b/css/styles.css
@@ -21,9 +21,15 @@ margin-right: auto;
 
 
 /* Top line */
-.header-nav {display: flex;}
+.top-line {border-bottom: 1px solid #e7e9fc;
+width: 1440px;
+margin-left: auto;
+margin-right: auto;}
 
-.list-nav {display: flex;
+.menu-nav {display: flex;
+align-items: center;}
+
+.menu {display: flex;
     padding-top: 24px;
     padding-bottom: 24px;
     gap: 40px;
@@ -37,13 +43,13 @@ margin-right: auto;
             letter-spacing: 0.32px;
         border-bottom: 4px solid #404BBF;}
 
-.header-container {display: flex;
+.header .container {display: flex;
     justify-content: space-between;}
 
 .list-address {display: flex;
     gap: 40px;}
 
-.logo {color:#4D5AE5;
+.logo-nav {color:#4D5AE5;
     font-family: "Raleway" ,sans-serif;
     font-size: 18px;
     font-weight: 700;
@@ -54,7 +60,7 @@ margin-right: auto;
     padding-bottom: 24px;
     margin-right: 76px;}
 
-    .logo-nav {color:#2E2F42;
+    .logo-studio {color:#2E2F42;
         font-family:"Raleway", sans-serif;
         font-size: 18px;
         font-weight: 700;
@@ -62,25 +68,25 @@ margin-right: auto;
         letter-spacing: 0.54px;
         text-transform: uppercase;}
 
-        .nav {color:#2E2F42;
+        .list-nav-item {color:#2E2F42;
             font-size: 16px;
             font-weight: 500;
             line-height: 1.5;
             letter-spacing: 0.32px;
-}
+        padding: 24px 0}
 
-        .nav:hover,
-        .nav:focus {color:#404BBF;
+        .list-nav-item:hover,
+        .list-nav-item:focus {color:#404BBF;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.32px;}
 
-    .address {font-style: normal;
+    .contact {font-style: normal;
         padding-top: 24px;
         padding-bottom: 24px;}
 
-    .contacts {color: #434455;
+    .contact-list {color: #434455;
         font-size: 16px;
         font-weight: 400;
         line-height: 1.5;
@@ -165,17 +171,18 @@ margin-right: auto;
 
  /* Section 3 */
 
+.people-name {border-radius: 0px 0px 4px 4px;
+padding: 32px 0;}
 
     .section-our-team {background-color: #F4F4FD;
-        padding-top: 120px;
+        padding: 120px 0;
         margin-left: auto;
         margin-right: auto;
         width: 1440px;}
 
 
     .our-team-list {display: flex;
-        gap: 24px;
-        padding-bottom: 120px;}
+        gap: 24px;}
 
     .title-our-team {color:#2E2F42;
         text-align: center;
@@ -211,6 +218,9 @@ margin-bottom: 72px;}
 
                 /* Section 4 */
 
+        .section-portfolio {padding-top: 120px;
+            padding-bottom: 120px;}
+
     .title-our-portfolio {color: #2E2F42;
         text-align: center;
         font-size: 36px;
@@ -221,15 +231,15 @@ margin-bottom: 72px;}
         padding-top: 120px;
         margin-left: auto;
         margin-right: auto;
-        padding-bottom: 72px;}
+margin-bottom: 72px;}
 
         .portfolio-list {display: flex;
+            row-gap: 48px;
             gap: 24px;
             flex-wrap: wrap;
             margin-bottom: 120px;}
 
             .portfolio-list-item {padding-bottom: 32px;
-                border: 1px solid #E7E9FC;
                 width: calc((100% - 24px * 2) / 3);
 }
 
@@ -245,14 +255,16 @@ margin-bottom: 72px;}
         line-height: 1.5;
         letter-spacing: 0.32px;}
 
-        .img-portfolio {margin-bottom: 32px;
-            }
+        .img-portfolio {}
+
+        .div-portfolio {padding: 32px 16px;
+        border: 1px solid #e7e9fc;
+    border-top: none;}
 
             /* Footer */
 
     .footer {background-color: #2E2F42;
-    padding-top: 101px;
-    padding-bottom: 100px;
+    padding: 100px;
     margin-right: auto;
     margin-left: auto;
     width: 1440px;}
@@ -264,7 +276,8 @@ margin-bottom: 72px;}
         line-height: 1.17;
         letter-spacing: 0.54px;
         text-transform: uppercase;
-        margin-bottom: 17.5px;}
+        margin-bottom: 16px;
+    display: inline-block;}
 
     .text-footer {color:#F4F4FD;
         font-size: 16px;
