--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ width: 1158px;}
             letter-spacing: 0.32px;
         border-bottom: 4px solid #404BBF;}
 
-header .container {display: flex;
+.header-container {display: flex;
     justify-content: space-between;}
 
 .list-address {display: flex;
