--- a/css/styles.css
+++ b/css/styles.css
@@ -51,8 +51,7 @@ width: 1158px;}
 margin: 0 auto;
 padding: 0 15px;}
 
-.list-address {display: flex;
-    gap: 40px;}
+.list-address {display: flex; gap: 40px;}
 
 .logo-nav {color:#4D5AE5;
     font-family: "Raleway" ,sans-serif;
@@ -87,10 +86,12 @@ padding: 0 15px;}
     line-height: 1.5;
     letter-spacing: 0.32px;}
 
-    .contact {font-style: normal;
+    .address {font-style: normal;
         padding-top: 24px;
         padding-bottom: 24px;
-    display: flex;}
+        display: flex;}
+
+    .address-intem{}
 
     .contact-list {color: #434455;
         font-size: 16px;
@@ -106,7 +107,10 @@ padding: 0 15px;}
     letter-spacing: 0.32px;}
 
 /* Hero */
-    .section-hero {background-color: #2E2F42;
+   
+div .containar-hero {display: block;}
+
+.section-hero {background-color: #2E2F42;
         padding: 188px 0;
         margin-bottom: 120px;
         margin-left: auto;
@@ -212,7 +216,8 @@ margin-bottom: 72px;}
     border-radius: 0px 0px 4px 4px;}
 
     .img-our-team {background-color: #FFFFFF;
-        margin-bottom: 32px;}
+        margin-bottom: 32px;
+    width: calc((100% - 72px) / 4);}
 
     .title-name {color:#2E2F42;
         text-align: center;
@@ -281,8 +286,7 @@ padding: 100px 0;
     margin-left: auto;
     width: 1440px;}
 
-    .logo-footer {display: inline-block;
-    margin-bottom: 16px;}
+    .logo-footer {display: inline-block; margin-bottom: 16px;}
 
     .logo-footer-studio {color:#F4F4FD;
         font-family: "Raleway", sans-serif;
