--- a/css/styles.css
+++ b/css/styles.css
@@ -186,6 +186,7 @@ max-width: 496px;
         letter-spacing: 0.32px;}
 
  /* Section 3 */
+.container-team {display: block;}
 
 .people-name {border-radius: 0px 0px 4px 4px;
 padding: 32px 0;}
@@ -198,7 +199,9 @@ padding: 32px 0;}
 
 
     .our-team-list {display: flex;
-        gap: 24px;}
+        gap: 24px;
+    width: 1158px;
+margin: auto;}
 
     .title-our-team {color:#2E2F42;
         text-align: center;
@@ -217,7 +220,8 @@ margin-bottom: 72px;}
 
     .img-our-team {background-color: #FFFFFF;
         margin-bottom: 32px;
-    width: calc((100% - 72px) / 4);}
+    display: flex;}
+    
 
     .title-name {color:#2E2F42;
         text-align: center;
@@ -234,6 +238,8 @@ margin-bottom: 72px;}
         letter-spacing: 0.32px;}
 
                 /* Section 4 */
+.container-portfolio {margin: auto;
+width: 1158px;}
 
         .section-portfolio {padding-top: 120px;
             padding-bottom: 120px;}
@@ -251,13 +257,13 @@ margin-bottom: 72px;}
 margin-bottom: 72px;}
 
         .portfolio-list {display: flex;
-        row-gap: 48px;
+            row-gap: 48px;
             gap: 24px;
             flex-wrap: wrap;
             margin-bottom: 120px;}
 
             .portfolio-list-item {padding-bottom: 32px;
-                width: calc((100% - 24px * 2) / 3);
+                ;
 }
 
     .title-portfolio {color:#2E2F42;
