--- a/css/styles.css
+++ b/css/styles.css
@@ -107,8 +107,7 @@ padding: 0 15px;}
     letter-spacing: 0.32px;}
 
 /* Hero */
-   
-div .containar-hero {display: block;}
+.containar {display: block;}
 
 .section-hero {background-color: #2E2F42;
         padding: 188px 0;
@@ -186,7 +185,7 @@ max-width: 496px;
         letter-spacing: 0.32px;}
 
  /* Section 3 */
-.container-team {display: block;}
+.container {display: block;}
 
 .people-name {border-radius: 0px 0px 4px 4px;
 padding: 32px 0;}
@@ -238,8 +237,9 @@ margin-bottom: 72px;}
         letter-spacing: 0.32px;}
 
                 /* Section 4 */
-.container-portfolio {margin: auto;
-width: 1158px;}
+.container {margin: auto;
+width: 1158px;
+display: block;}
 
         .section-portfolio {padding-top: 120px;
             padding-bottom: 120px;}
