--- a/css/styles.css
+++ b/css/styles.css
@@ -46,10 +46,14 @@ width: 1158px;}
             letter-spacing: 0.32px;
         border-bottom: 4px solid #404BBF;}
 
-.container {display: flex;
+.container-top-line {display: flex;
     justify-content: space-between;
 margin: 0 auto;
-padding: 0 15px;}
+padding: 0 15px;
+width: 1158px;}
+
+.menu-nav {width: auto;
+margin-right: auto;}
 
 .list-address {display: flex; gap: 40px;}
 
@@ -151,7 +155,7 @@ max-width: 496px;
         .button:focus {background-color:#404BBF;}
         
         /* Section 2 */
-.section-feature {padding: 120px 0;}
+.section-feature {}
 
     .visually-hidden {position: absolute;
     width: 1px;
@@ -241,7 +245,7 @@ margin-bottom: 72px;}
 width: 1158px;
 display: block;}
 
-        .section-portfolio {padding-top: 120px;
+        .section-portfolio {
             padding-bottom: 120px;}
 
     .title-our-portfolio {color: #2E2F42;
@@ -259,8 +263,7 @@ margin-bottom: 72px;}
         .portfolio-list {display: flex;
             row-gap: 48px;
             gap: 24px;
-            flex-wrap: wrap;
-            margin-bottom: 120px;}
+            flex-wrap: wrap;}
 
             .portfolio-list-item {padding-bottom: 32px;
                 ;
@@ -292,8 +295,16 @@ padding: 100px 0;
     margin-left: auto;
     width: 1440px;}
 
-    .logo-footer {display: inline-block;
-         margin-bottom: 16px;}
+    .logo-footer {color: #4D5AE5; 
+        font-family: "Raleway", sans-serif;
+        font-size: 18px;
+        font-weight: 700;
+        line-height: 1.17;
+        letter-spacing: 0.54px;
+        text-transform: uppercase;
+        padding-top: 24px;
+        padding-bottom: 24px;
+        margin-right: 76px;}
 
     .logo-footer-studio {color:#F4F4FD;
         font-family: "Raleway", sans-serif;
