--- a/css/styles.css
+++ b/css/styles.css
@@ -308,7 +308,7 @@ padding: 100px 0;
         padding-bottom: 24px;
         margin-right: 76px;
         display: inline-block;
-        margin-right: 16px;
+        margin-bottom: 16px;
     }
 
     .logo-footer-studio {color:#F4F4FD;
