--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ width: 1158px;}
             letter-spacing: 0.32px;
         border-bottom: 4px solid #404BBF;}
 
-.top-line {display: flex;
+.container-top-line {display: flex;
 justify-content: space-between;
 margin: 0 auto;
 padding: 0 15px;
@@ -114,6 +114,15 @@ margin-right: auto;}
     letter-spacing: 0.32px;}
 
 /* Hero */
+
+.hero-container {display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 1440px;
+        margin-left: auto;
+            margin-right: auto;
+            width: 1440px;
+        }
 
 .section-hero {background-color: #2E2F42;
         padding: 188px 0;
@@ -191,9 +200,8 @@ max-width: 496px;
         letter-spacing: 0.32px;}
 
  /* Section 3 */
-
- .container {display: block;}
-
+ 
+.portfolio-container {display: block;}
 .people-name {border-radius: 0px 0px 4px 4px;
 padding: 32px 0;}
 
@@ -279,7 +287,7 @@ margin-bottom: 72px;}
         line-height: 1.5;
         letter-spacing: 0.32px;}
 
-        .img-portfolio {}
+        .img-portfolio {display: block;}
 
         .div-portfolio {padding: 32px 16px;
         border: 1px solid #e7e9fc;
