--- a/css/styles.css
+++ b/css/styles.css
@@ -22,14 +22,12 @@ margin-right: auto;
 
 
 /* Top line */
-.top-line {border-bottom: 1px solid #e7e9fc;
+.container-top-line {border-bottom: 1px solid #e7e9fc;
 width: 1440px;
 margin-left: auto;
 margin-right: auto;
 display: flex;
 }
-
-.container {display: flex;}
 
 .menu-nav {display: flex;
 align-items: center;
@@ -114,15 +112,6 @@ margin-right: auto;}
     letter-spacing: 0.32px;}
 
 /* Hero */
-
-.container {display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 1440px;
-        margin-left: auto;
-            margin-right: auto;
-            width: 1440px;
-        }
 
 .section-hero {background-color: #2E2F42;
         padding: 188px 0;
