--- a/css/styles.css
+++ b/css/styles.css
@@ -17,15 +17,15 @@ img{ display: block;}
 .container {max-width: 1158px;
 padding: 0 15px;
 margin-left: auto;
-margin-right: auto;
+    margin-right: auto;
 }
 
 
 /* Top line */
-.container-top-line {border-bottom: 1px solid #e7e9fc;
-width: 1440px;
-margin-left: auto;
-margin-right: auto;
+.top-line {border-bottom: 1px solid #e7e9fc;
+}
+
+.container-top-line {width: 1440px;
 display: flex;
 }
 
