--- a/css/styles.css
+++ b/css/styles.css
@@ -110,7 +110,6 @@ margin-right: auto;}
 
 .section-hero {background-color: #2E2F42;
         padding: 188px 0;
-        margin-bottom: 120px;
         margin-left: auto;
         margin-right: auto;
         width: 1440px;
@@ -166,7 +165,6 @@ max-width: 496px;
 
         .feature-list {display: flex;
         gap: 24px;
-        padding-bottom: 120px;
     }
 
         .feature-list-item {width: calc((100% - 72px) / 4);}
@@ -196,9 +194,7 @@ padding: 32px 0;}
 
 
     .our-team-list {display: flex;
-        gap: 24px;
-    width: 1158px;
-margin: auto;}
+        gap: 24px;}
 
     .title-our-team {color:#2E2F42;
         text-align: center;
@@ -215,8 +211,7 @@ margin-bottom: 72px;}
         width: calc((100% - 24px * 3) / 4);
     border-radius: 0px 0px 4px 4px;}
 
-    .img-our-team {background-color: #FFFFFF;
-        margin-bottom: 32px;}
+    .img-our-team {background-color: #FFFFFF;}
 
 
     .title-name {color:#2E2F42;
@@ -245,9 +240,6 @@ margin-bottom: 72px;}
         line-height: 1.11;
         letter-spacing: 0.72px;
         text-transform: capitalize;
-        padding-top: 120px;
-        margin-left: auto;
-        margin-right: auto;
 margin-bottom: 72px;}
 
         .portfolio-list {display: flex;
@@ -256,7 +248,7 @@ margin-bottom: 72px;}
             row-gap: 48px;
         }
 
-            .portfolio-list-item {padding-bottom: 32px;}
+            .portfolio-list-item {}
 
     .title-portfolio {color:#2E2F42;
         font-size: 20px;
@@ -291,8 +283,6 @@ padding: 100px 0;
         line-height: 1.17;
         letter-spacing: 0.54px;
         text-transform: uppercase;
-        padding-top: 24px;
-        padding-bottom: 24px;
         margin-right: 76px;
         display: inline-block;
         margin-bottom: 16px;
